--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,12 +31,12 @@ dependencies:
   flutter:
     sdk: flutter
 
-
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.6
   location: ^6.0.1
   permission_handler: ^11.3.1
+  google_maps_flutter: ^2.6.1
 
 dev_dependencies:
   flutter_test:
