--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   location: ^6.0.1
   permission_handler: ^11.3.1
   google_maps_flutter: ^2.6.1
+  dio: ^5.4.3+1
 
 dev_dependencies:
   flutter_test:
